# utboxgen-py

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/utboxgen_py_A1Asriel/: generator.py
tests/: test_gen.py
