[build-system]
requires = ["setuptools>=61.0", "Pillow>=10.2.0,<11.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utboxgen-py_A1Asriel"
version = "0.0.1"
authors = [
  { name="A1Asriel", email="27139654+A1Asriel@users.noreply.github.com" },
]
description = "A Python library for generating Undertale-styled textbox images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/A1Asriel/utboxgen-py"
Issues = "https://github.com/A1Asriel/utboxgen-py/issues"